working: show name and link

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ytun.walkie_stalkie.MainActivity">
+    tools:context="com.ytun.walkie_stalkie.FBActivity">
 
     <!--<TextView-->
     <!--android:layout_width="wrap_content"-->
@@ -75,6 +75,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.3" />
+
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Log Out"
+            android:layout_weight="0.04" />
     </LinearLayout>
 
 
