--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,26 +55,117 @@
         android:layout_centerHorizontal="true"
         android:weightSum="1">
 
-        <TextView
-            android:id="@+id/result1_txtv"
-            android:text=""
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
 
-        <TextView
-            android:id="@+id/result2_txtv"
-            android:text=""
+        <RelativeLayout
+            android:id="@+id/result_layout1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
+            android:layout_height="103dp"
+            android:weightSum="1">
 
-        <TextView
-            android:id="@+id/result3_txtv"
-            android:text=""
+            <TextView
+                android:id="@+id/name1_txtv"
+                android:text=""
+                android:layout_width="182dp"
+                android:layout_height="30dp"
+                android:layout_weight="0.3"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:id="@+id/detail1_txtv"
+                android:text=""
+                android:layout_width="182dp"
+                android:layout_height="30dp"
+                android:layout_weight="0.7"
+                android:layout_below="@+id/name1_txtv"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/profileImage1"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/name1_txtv" />
+
+        </RelativeLayout>
+
+
+
+
+        <RelativeLayout
+            android:id="@+id/result_layout2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3" />
+            android:layout_height="103dp"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/name2_txtv"
+                android:text=""
+                android:layout_width="182dp"
+                android:layout_height="50dp"
+                android:layout_weight="0.3"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:id="@+id/detail2_txtv"
+                android:text=""
+                android:layout_width="182dp"
+                android:layout_height="50dp"
+                android:layout_weight="0.7"
+                android:layout_below="@+id/name2_txtv"
+                android:layout_alignParentEnd="true" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/profileImage2"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/name2_txtv" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/result_layout3"
+            android:layout_width="match_parent"
+            android:layout_height="103dp"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/name3_txtv"
+                android:text=""
+                android:layout_width="182dp"
+                android:layout_height="50dp"
+                android:layout_weight="0.3"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:id="@+id/detail3_txtv"
+                android:text=""
+                android:layout_width="182dp"
+                android:layout_height="50dp"
+                android:layout_weight="0.7"
+                android:layout_below="@+id/name3_txtv"
+                android:layout_alignParentEnd="true" />
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/profileImage3"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/name3_txtv" />
+
+        </RelativeLayout>
+
 
         <Button
             android:id="@+id/logout"
